--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,29 +1,56 @@
-<!-- res/layout/activity_second.xml -->
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity">
 
-    <ListView
-        android:id="@+id/listViewChat"
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:divider="@android:color/transparent"
-        android:dividerHeight="16dp"
-        android:stackFromBottom="true"
-        android:transcriptMode="alwaysScroll"/>
+        android:id="@+id/recycler_view"
+        android:layout_above="@+id/bottom_layout"/>
 
-    <EditText
-        android:id="@+id/editTextMessage"
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:hint="메시지를 입력하세요"/>
+        android:id="@+id/tv_welcome"
+        android:layout_centerInParent="true"
+        android:text="Welcome"
+        android:gravity="center"
+        android:textSize="28sp"
+        />
 
-    <Button
-        android:id="@+id/buttonSend"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:text="전송"/>
+        android:padding="8dp"
+        android:id="@+id/bottom_layout">
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/et_msg"
+            android:layout_centerInParent="true"
+            android:hint="Write here"
+            android:padding="16dp"
+            android:layout_toLeftOf="@+id/btn_send"
+            android:background="@drawable/shape"/>
+
+        <ImageButton
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            android:id="@+id/btn_send"
+            android:layout_alignParentEnd="true"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="10dp"
+            android:padding="8dp"
+            android:src="@drawable/send_icon"
+            android:background="?attr/selectableItemBackgroundBorderless"
+            />
+
+    </RelativeLayout>
+
 </RelativeLayout>
