--- a/app/src/main/res/drawable/shape.xml
+++ b/app/src/main/res/drawable/shape.xml
@@ -2,8 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <corners android:radius="10dip"/>
-    <stroke android:width="1dp"/>
+    <corners android:radius="8dp"/>
     <solid android:color="@color/white"/>
 
 </shape>
