--- a/app/src/main/res/layout/chat_item.xml
+++ b/app/src/main/res/layout/chat_item.xml
@@ -2,15 +2,17 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="8dp"
+    android:orientation="vertical">
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/left_chat_view"
         android:background="@drawable/shape"
-        android:backgroundTint="@color/purple_200"
+        android:backgroundTint="@color/material_on_background_emphasis_high_type"
         android:layout_marginEnd="80dp"
+        android:layout_gravity="end"
         android:padding="8dp">
 
         <TextView
@@ -24,23 +26,22 @@
     </LinearLayout>
 
     <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="8dp"
+        android:gravity="end"
+        android:background="@drawable/shape"
+        android:backgroundTint="#03A9F4"
+        android:layout_marginStart="80dp"
+        android:id="@+id/right_chat_view">
+
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/right_chat_view"
-        android:background="@drawable/shape"
-        android:backgroundTint="@color/teal_200"
-        android:layout_marginStart="80dp"
-        android:layout_alignParentEnd="true"
-        android:padding="8dp">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/right_chat_tv"
-            android:textColor="@color/white"
-            android:textSize="18sp"
-            android:text="Hello World"/>
-
-    </LinearLayout>
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        android:text="Hello World"
+        android:id="@+id/right_chat_tv"/>
+</LinearLayout>
 
 </LinearLayout>
